# jstreamer

./: CMakeLists.txt  README.md  conanfile.txt
include/jstreamer/: jst_base_element.h  jst_caps.h  jst_i_element.h  jst_property_map.h  jst_property_spec_manager.h  jst_property_value_manager.h  jst_signal_manager.h  jst_structure.h  jst_type.h
src/: jst_base_element.cpp
tests/: CMakeLists.txt  test_base_element.cpp  test_caps.cpp  test_property_map.cpp  test_property_spec_manager.cpp  test_property_value_manager.cpp  test_signal_manager.cpp  test_structure.cpp
